--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "create-react-app",
+  "name": "lottie-react-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "lottie-web": "^5.6.8",
     "react": "^16.6.1",
