path to animationData change

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Website Coming Soon",
+  "name": "Website Coming Soon...",
   "icons": [
     {
       "src": "favicon.ico",
