--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "dotenv": "^8.2.0",
     "lottie-web": "^5.6.8",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-lottie": "^1.2.3",
+    "react-mailchimp-subscribe": "^2.1.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
